[package]
name = "secure-process-memory"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.175"
sysinfo = "0.37.0"


[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.62.0",features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading"
]}
